k8s_manifest/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
  labels:
    app: demo-deployment
spec:
  selector:
    matchLabels:
      app: demo
  replicas: 1
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: demo
        image: fxzoa/demo
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        - containerPort: 9010
        args: ["-Dfile.encoding=UTF-8", "-Dcom.sun.management.jmxremote=true"]
