k8s_manifest/dev/alb-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "demo-service-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/security-groups: sg-008275d705e286e77
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:070713073295:certificate/524c42ca-2f02-473d-ae60-ec90096aa2ac
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '120'
  labels:
    app: demo-service-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: demo-service
              servicePort: 80
